--- a/index.html
+++ b/index.html
@@ -166,6 +166,12 @@
                     </div>
                 </div>
                 <div class="col-sm-10">
+                  <form class="form-inline" id="query-form" style="width: 100%; margin: 5px;">
+                    <div class="form-group mx-sm-3 mb-2" style="width: 90%;">
+                      <input type="text" class="form-control" id="query" placeholder="Query" style="width: 100%;">
+                    </div>
+                    <button type="submit" class="btn btn-primary mb-2">Ask</button>
+                  </form>
                     <div id="data" class="row">
                         <table id="table" class="table table-bordered">
                             <thead>
@@ -212,6 +218,24 @@
 
     <!-- MODALS -->
 
+  <div id="decision-tree-modal" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Decision Tree</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div id="decision-tree-modal-body" class="modal-body">
+        </div>
+        <div class="modal-footer">
+          <button id="decision-tree-modal-submit" type="button" data-dismiss="modal" class="btn btn-primary">Ok</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div id="open-file-modal" class="modal" tabindex="-1" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -224,14 +248,20 @@
           <div id="to-binary-modal-body" class="modal-body">
             <form>
               <div class="form-group">
-                <label for="exampleInputEmail1">Source File</label>
-                <input id="file" type="file" class="form-control btn btn-secondary">
+                <div class="custom-file">
+                  <input type="file" class="custom-file-input form-control" id="file">
+                  <label class="custom-file-label" for="file">Choose file</label>
+                </div>
               </div>
               <div class="form-group">
-                <label for="exampleInputEmail1">File Type</label>
-                <select id="data-type" class="btn btn-secondary form-control">
-                    <option value="csv" selected>CSV</option>
-                </select>
+                <div class="input-group mb-3" style="width: 100%;">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text">File type</span>
+                  </div>
+                  <select id="data-type" class="form-control">
+                      <option value="csv" selected>CSV</option>
+                  </select>
+                </div>
               </div>
             </form>
           </div>
@@ -408,5 +438,7 @@
     <script src="js/bpAlg.js"></script>
     <script src="js/models.js"></script>
     <script src="js/math.js"></script>
+    <script src="js/tree.js"></script>
+    <script src="js/query.js"></script>
 </body>
 </html>
