--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                               <button id="bayes" type="button" class="btn btn-secondary">Bayes</button>
                               <button id="kmeans" type="button" class="btn btn-secondary">K-Means</button>
                               <button id="decision-tree" type="button" class="btn btn-secondary">Decision Tree</button>
+                              <button id="msvm" type="button" class="btn btn-secondary">Multi SVM</button>
                               <button id="back-propagation" type="button" class="btn btn-secondary">Back Propagation</button>
                             </div>
                           </div>
@@ -439,5 +440,6 @@
     <script src="js/math.js"></script>
     <script src="js/query.js"></script>
     <script src="js/decision-tree.js"></script>
+    <script src="js/jssvm.js"></script>
 </body>
 </html>
